--- a/data/data_filer.ipynb
+++ b/data/data_filer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "0b509228",
    "metadata": {},
    "outputs": [],
@@ -15,28 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "c8754b24",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "14744"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(df)"
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds1 = load_dataset(\"LangAGI-Lab/world_model_for_wa_tao_dataset\", split=\"train\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "72f99f20",
    "metadata": {},
    "outputs": [],
@@ -48,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "id": "e772ac35",
    "metadata": {},
    "outputs": [],
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "2750b283",
    "metadata": {},
    "outputs": [
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "00d8af88",
    "metadata": {},
    "outputs": [
@@ -219,6 +210,69 @@
     "print(\"saved to: ./sft_train.parquet\")\n",
     "df[11000:].to_parquet(\"./sft_test.parquet\", index=False)\n",
     "print(\"saved to: ./sft_test.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89959ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saved to: ./grpo_train.parquet\n",
+      "saved to: ./grpo_test.parquet\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "grpo_data = []\n",
+    "\n",
+    "for idx, i in enumerate(filtered_indices):\n",
+    "\n",
+    "    input_text = f\"\"\"CURRENT OBSERVATION: {df.iloc[i]['current_observation']}\n",
+    "CURRENT ACTION: {df.iloc[i]['current_action']}\"\"\"\n",
+    "\n",
+    "    user_content = instruction + \"\\n\\n Now, let's start the task. Here's the task for you: \\n\" + input_text\n",
+    "\n",
+    "    prompt_messages = [\n",
+    "        {\"role\": \"user\", \"content\": user_content}\n",
+    "    ]\n",
+    "\n",
+    "    ground_truth = ds1[i]['next_state_acctree']\n",
+    "\n",
+    "    grpo_data.append({\n",
+    "        \"data_source\": \"web_agent\",  \n",
+    "        \"prompt\": prompt_messages,  \n",
+    "        \"ability\": \"world_model\",  \n",
+    "        \"reward_model\": {         \n",
+    "            \"style\": \"rule\",\n",
+    "            \"ground_truth\": ground_truth\n",
+    "        }\n",
+    "    })\n",
+    "\n",
+    "# 转为 DataFrame\n",
+    "df_grpo = pd.DataFrame(grpo_data)\n",
+    "\n",
+    "# 5. 打乱数据 (Shuffle)\n",
+    "df_grpo = df_grpo.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "# 6. 分割并保存 Train / Test\n",
+    "# 注意：Train 和 Test 最好分开保存，方便训练脚本里分别引用\n",
+    "train_df = df_grpo.iloc[:11000]\n",
+    "test_df = df_grpo.iloc[11000:]\n",
+    "\n",
+    "# 保存为 Parquet\n",
+    "train_df.to_parquet(\"./grpo_train.parquet\", index=False)\n",
+    "print(f\"saved to: ./grpo_train.parquet, count: {len(train_df)}\")\n",
+    "\n",
+    "test_df.to_parquet(\"./grpo_test.parquet\", index=False)\n",
+    "print(f\"saved to: ./grpo_test.parquet, count: {len(test_df)}\")"
    ]
   },
   {
